--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
     <title>סיבוב PDF</title>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNRBCX583K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NNRBCX583K');
+</script>
 </head>
 <body>
     <h1>סובב קובץ PDF</h1>
