--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </script>
 </head>
 <body>
-    <h1>סובב קובץ PDF</h1>
+    <h1>ROTATE PDF FILE</h1>
     <form action="/rotate" method="post" enctype="multipart/form-data">
         <label>בחר קובץ PDF:</label><br>
         <input type="file" name="pdf_file" accept="application/pdf" required><br><br>
