--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,11 @@
 <body>
     <h1>ROTATE PDF FILE</h1>
     <form action="/rotate" method="post" enctype="multipart/form-data">
-        <label>בחר קובץ PDF:</label><br>
+        <label>CHOOSE PDF:</label><br>
         <input type="file" name="pdf_file" accept="application/pdf" required><br><br>
-        <label>כמה מעלות לסובב (90, 180, 270):</label><br>
+        <label>degrees rotate (90, 180, 270):</label><br>
         <input type="number" name="degrees" required><br><br>
-        <button type="submit">סובב והורד</button>
+        <button type="submit">ROTATE AND DOWNLOAD</button>
     </form>
 </body>
 </html>
